--- a/task-2/Dockerfile
+++ b/task-2/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:20.04
 RUN apt-get update
-RUN apt-get install iproute2
-RUN apt-get install docker.io apparmor apparmor.utils 
+RUN apt-get install iproute2 -y
+RUN apt-get install docker.io apparmor apparmor.utils -y
 COPY ./src/. .
